# ibb

./: .gitignore  CMakeLists.txt  README.md  blackbox.c  blackbox.h  bwt.c  bwt.h  bwt2.c  constants.h  data.c  data.h  data2.c  file.c  file.h  heapify.c  main.c  popcount.c  popcount.h  popcount_basic.c  popcount_test.c  readspeed.c  test_value.c  tpool.c  tpool.h  values.c  values.h
